# neural-gaussian-scale-space-fields

./: .gitignore  LICENSE  README.md  pyproject.toml  self_contained_demo.py
ngssf/: __init__.py  data.py  field.py  results.py  sampler.py  scaler.py  util.py
ngssf/nn/: __init__.py  encoding.py  field.py  linear_norm.py  prefab.py
scripts/: benchmark.py  calibrate.py  metrics.py  metrics_summary.py  performance.py  textured_apply_neural_texture.py  textured_render_uv.py  train.py  visualize.py
scripts/shaders/: display.frag  display.vert  mesh.frag  mesh.vert
